Add explanations to Simple Classifiers and RandomizedSearch

--- a/Part-05-B.ipynb
+++ b/Part-05-B.ipynb
@@ -83,19 +83,18 @@
      "text": [
       "test\n",
       "train\n",
+      "all\n",
+      "neg\n",
       "pos\n",
       "all\n",
       "neg\n",
-      "unsup\n",
       "pos\n",
-      "all\n",
-      "neg\n"
+      "unsup\n"
      ]
     }
    ],
    "source": [
-    "data_dir = !pwd \n",
-    "data_dir = Path(data_dir[0])/'data'/'imdb'/'aclImdb'\n",
+    "data_dir = Path(os.getcwd())/'data'/'imdb'/'aclImdb'\n",
     "assert data_dir.exists()\n",
     "for pathroute in os.walk(data_dir):\n",
     "    next_path = pathroute[1]\n",
@@ -158,8 +157,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 0 ns, sys: 0 ns, total: 0 ns\n",
-      "Wall time: 6.68 µs\n"
+      "Wall time: 0 ns\n"
      ]
     }
    ],
@@ -207,9 +205,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.88312\n",
-      "CPU times: user 21.5 s, sys: 748 ms, total: 22.3 s\n",
-      "Wall time: 11.5 s\n"
+      "0.88316\n",
+      "Wall time: 10 s\n"
      ]
     }
    ],
@@ -367,7 +364,7 @@
     {
      "data": {
       "text/plain": [
-       "0.74224"
+       "0.74304"
       ]
      },
      "execution_count": 18,
@@ -384,46 +381,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "# Ensemble Models \n",
-    "**Ensembling models** is a very powerful technique to improve your model performance across a variety of Machine Learning tasks. \n",
-    "\n",
-    "In the section below, I borrow heavily from the [Kaggle Ensembling Guide](https://mlwave.com/kaggle-ensembling-guide/) written by [MLWave](https://mlwave.com/).\n",
-    "\n",
-    "I explain why ensembling helps reduce error, or improve accuracy. I demonstrate all the popular techniques on our chosen task and dataset. Each demo includes the ensembling code (borrowed from MLWave) and performance gain from those. \n",
-    "\n",
-    "To ensure that you understand these techniques, I strongly urge you to try them on a few datasets. "
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "## Voting Ensemble\n",
-    "\n",
-    "### Simple Majority\n",
-    "The simplest ensembling technique is perhaps to take a simple majority. This works on the intuition that a single model might make a error on a particular prediction, but several different models are unlikely to make identical errors. \n",
-    "\n",
-    "Let's look at an example. \n",
-    "\n",
-    "Ground truth: 1**1**011001\n",
-    "\n",
-    "Let's assume there are 3 models with only one error for this example\n",
-    "\n",
-    "Model A Prediction: 1**0**011001\n",
-    "\n",
-    "Model B Prediction: 1**1**011001\n",
-    "\n",
-    "Model C Prediction: 1**1**011001\n",
-    "\n",
-    "The majority votes gives us the correct answer in this example - \n",
-    "\n",
-    "Majority vote: 1**1**10110011\n",
-    "\n",
-    "---\n",
-    "\n",
-    "We have predictions from our models above, let's check the first few predictions from each of those: "
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -433,9 +396,12 @@
     {
      "data": {
       "text/plain": [
-       "(array([1, 1, 1, 1, 0, 0, 1, 1, 0, 1, 1, 0, 1, 0, 1, 0, 1, 1, 1, 1]),\n",
-       " array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1]),\n",
-       " array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]))"
+       "(array([0, 0, 1, 1, 1, 1, 0, 1, 1, 1, 0, 1, 1, 0, 0, 1, 1, 1, 0, 1],\n",
+       "       dtype=int64),\n",
+       " array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1],\n",
+       "       dtype=int64),\n",
+       " array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+       "       dtype=int64))"
       ]
      },
      "execution_count": 19,
@@ -500,37 +466,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "We get an improvement from our simple ensembling technique but nothing significant. Why would this be?\n",
-    "\n",
-    "#### Understanding Correlations\n",
-    "\n",
-    "To see this, let us take 3 simple models again. The ground truth is all 1’s:\n",
-    "\n",
-    "1111111100 = 80% accuracy\n",
-    "\n",
-    "1111111100 = 80% accuracy\n",
-    "\n",
-    "1011111100 = 70% accuracy\n",
-    "\n",
-    "These models are highly correlated in their predictions. When we take a majority vote we see no improvement:\n",
-    "\n",
-    "1111111100 = 80% accuracy\n",
-    "\n",
-    "Now we compare to 3 less-performing, but highly uncorrelated models:\n",
-    "\n",
-    "1111111100 = 80% accuracy\n",
-    "\n",
-    "0111011101 = 70% accuracy\n",
-    "\n",
-    "1000101111 = 60% accuracy\n",
-    "\n",
-    "When we ensemble this with a majority vote we get:\n",
-    "\n",
-    "1111111101 = 90% accuracy\n",
-    "\n",
-    "We get an improvement which is much higher than any of our individual models. Low correlation between model predictions can lead to better performance. "
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -540,7 +476,7 @@
     {
      "data": {
       "text/plain": [
-       "0.884381372740408"
+       "0.884299617053972"
       ]
      },
      "execution_count": 23,
@@ -560,7 +496,7 @@
     {
      "data": {
       "text/plain": [
-       "0.7859628207349088"
+       "0.7858874230493662"
       ]
      },
      "execution_count": 24,
@@ -580,7 +516,7 @@
     {
      "data": {
       "text/plain": [
-       "0.5357472161807284"
+       "0.5480712023729699"
       ]
      },
      "execution_count": 25,
@@ -600,7 +536,7 @@
     {
      "data": {
       "text/plain": [
-       "0.5223665147040992"
+       "0.5403442772974716"
       ]
      },
      "execution_count": 26,
@@ -620,7 +556,7 @@
     {
      "data": {
       "text/plain": [
-       "0.5324490457674085"
+       "0.5466513588106106"
       ]
      },
      "execution_count": 27,
@@ -679,7 +615,7 @@
     {
      "data": {
       "text/plain": [
-       "0.88484"
+       "0.88524"
       ]
      },
      "execution_count": 31,
@@ -691,13 +627,166 @@
     "weighted_majority = voting(predictions)\n",
     "sum(weighted_majority == y_test)/len(y_test)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ifrom sklearn.ensemble import VotingClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 0 ns\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "VotingClassifier(estimators=[('lr', Pipeline(memory=None,\n",
+       "     steps=[('vect', CountVectorizer(analyzer='word', binary=False, decode_error='strict',\n",
+       "        dtype=<class 'numpy.int64'>, encoding='utf-8', input='content',\n",
+       "        lowercase=True, max_df=1.0, max_features=None, min_df=1,\n",
+       "        ngram_range=(1, 1), pre...ar_tf=False, use_idf=True)), ('clf', MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True))]))],\n",
+       "         flatten_transform=None, n_jobs=1, voting='hard', weights=None)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "voting_clf = VotingClassifier(estimators=[('lr', lr_clf), ('rf', xtc_clf), ('mnb', mnb_clf)], voting='hard')\n",
+    "voting_clf.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\nirantk\\Anaconda3\\envs\\fastai\\lib\\site-packages\\sklearn\\preprocessing\\label.py:151: DeprecationWarning: The truth value of an empty array is ambiguous. Returning False, but in future this will result in an error. Use `array.size > 0` to check that an array is not empty.\n",
+      "  if diff:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.87452"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "voting_predictions = voting_clf.predict(X_test)\n",
+    "sum(voting_predictions == y_test)/len(y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\nirantk\\Anaconda3\\envs\\fastai\\lib\\site-packages\\sklearn\\preprocessing\\label.py:151: DeprecationWarning: The truth value of an empty array is ambiguous. Returning False, but in future this will result in an error. Use `array.size > 0` to check that an array is not empty.\n",
+      "  if diff:\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 2min 42s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "voting_clf = VotingClassifier(estimators=[('lr', lr_clf), ('rf', xtc_clf), ('mnb', mnb_clf)], voting='soft')\n",
+    "voting_clf.fit(X_train, y_train)\n",
+    "voting_predictions = voting_clf.predict(X_test)\n",
+    "sum(voting_predictions == y_test)/len(y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "voting_clf = VotingClassifier(estimators=[('lr', lr_clf),('rf', xtc_clf), ('mnb', mnb_clf)], voting='soft')\n",
+    "voting_clf.fit(X_train, y_train)\n",
+    "voting_predictions = voting_clf.predict(X_test)\n",
+    "sum(voting_predictions == y_test)/len(y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 0 ns\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\nirantk\\Anaconda3\\envs\\fastai\\lib\\site-packages\\sklearn\\preprocessing\\label.py:151: DeprecationWarning: The truth value of an empty array is ambiguous. Returning False, but in future this will result in an error. Use `array.size > 0` to check that an array is not empty.\n",
+      "  if diff:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.88536"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "voting_clf = VotingClassifier(estimators=[('lr', lr_clf), ('lr2', lr_clf),('rf', xtc_clf), ('mnb2', mnb_clf),('mnb', mnb_clf)], voting='soft')\n",
+    "voting_clf.fit(X_train, y_train)\n",
+    "voting_predictions = voting_clf.predict(X_test)\n",
+    "sum(voting_predictions == y_test)/len(y_test)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:fastai]",
+   "display_name": "fastAI",
    "language": "python",
-   "name": "conda-env-fastai-py"
+   "name": "fastai"
   },
   "language_info": {
    "codemirror_mode": {
@@ -709,7 +798,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
