End to End Notebook Run

--- a/Part-05 Modern Text Classification.ipynb
+++ b/Part-05 Modern Text Classification.ipynb
@@ -296,7 +296,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 5.71 s\n"
+      "Wall time: 5.44 s\n"
      ]
     },
     {
@@ -829,16 +829,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.70356"
+       "0.7028"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -868,16 +868,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.73096"
+       "0.7226"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -907,16 +907,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.74832"
+       "0.75024"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1021,7 +1021,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 3min 7s\n"
+      "Wall time: 5min 2s\n"
      ]
     },
     {
@@ -1060,7 +1060,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculated cross-validation accuracy: 0.87616\n"
+      "Calculated cross-validation accuracy: 0.87648\n"
      ]
     }
    ],
@@ -1118,7 +1118,7 @@
     {
      "data": {
       "text/plain": [
-       "(0.90052, array([1, 1, 1, ..., 0, 0, 1], dtype=int64))"
+       "(0.90096, array([1, 1, 1, ..., 0, 0, 1], dtype=int64))"
       ]
      },
      "execution_count": 50,
@@ -1156,7 +1156,7 @@
        " ('tfidf',\n",
        "  TfidfTransformer(norm='l2', smooth_idf=True, sublinear_tf=False, use_idf=True)),\n",
        " ('clf',\n",
-       "  LogisticRegression(C=50, class_weight=None, dual=False, fit_intercept=True,\n",
+       "  LogisticRegression(C=75, class_weight=None, dual=False, fit_intercept=True,\n",
        "            intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
        "            penalty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
        "            verbose=0, warm_start=False))]"
@@ -1238,7 +1238,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 5min 32s\n"
+      "Wall time: 5min 19s\n"
      ]
     },
     {
@@ -1309,7 +1309,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculated cross-validation accuracy: 0.87684 while random_search was 0.87616\n"
+      "Calculated cross-validation accuracy: 0.87684 while random_search was 0.87648\n"
      ]
     }
    ],
@@ -1326,7 +1326,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 1min 9s\n"
+      "Wall time: 1min 5s\n"
      ]
     }
    ],
@@ -1422,14 +1422,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 18.9 s\n"
+      "Wall time: 16.3 s\n"
      ]
     }
    ],
@@ -1441,7 +1441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1455,10 +1455,10 @@
     {
      "data": {
       "text/plain": [
-       "0.71684"
+       "0.71092"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1497,14 +1497,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 1min 27s\n"
+      "Wall time: 1min 13s\n"
      ]
     }
    ],
@@ -1516,7 +1516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1526,7 +1526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1535,7 +1535,7 @@
        "0.88216"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1547,7 +1547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1578,14 +1578,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 1min 41s\n"
+      "Wall time: 1min 32s\n"
      ]
     }
    ],
@@ -1604,44 +1604,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\nirantk\\Anaconda3\\envs\\fastai\\lib\\site-packages\\sklearn\\preprocessing\\label.py:151: DeprecationWarning: The truth value of an empty array is ambiguous. Returning False, but in future this will result in an error. Use `array.size > 0` to check that an array is not empty.\n",
-      "  if diff:\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "0.88092"
+       "0.8808"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "weighted_voting_acc, _ = imdb_acc(weighted_voting_clf)\n",
-    "weighted_voting_acc\n",
-    "# 0.87996 for soft"
+    "weighted_voting_acc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We see that the weighted voting gives us an absolute accuracy gain of 1.50%\n"
+      "We see that the weighted voting gives us an absolute accuracy gain of 1.48%\n"
      ]
     }
    ],
@@ -1708,7 +1699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1717,7 +1708,7 @@
        "0.8442355164021454"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1728,7 +1719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1736,7 +1727,7 @@
      "output_type": "stream",
      "text": [
       "0.88216\n",
-      "Wall time: 1min 49s\n"
+      "Wall time: 1min 42s\n"
      ]
     }
    ],
@@ -1750,16 +1741,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.3272698219282598"
+       "0.31617426405271837"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1770,15 +1761,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.70564\n",
-      "Wall time: 58.1 s\n"
+      "0.70428\n",
+      "Wall time: 54 s\n"
      ]
     }
    ],
