Add Chatbot Chapter

--- a/Part-04 Text Representations.ipynb
+++ b/Part-04 Text Representations.ipynb
@@ -32,11 +32,7 @@
     "\n",
     "Document Embeddings \n",
     "- Document modeling using doc2vec on a small dataset\n",
-    "- Using document embedding for clustering\n",
-    "\n",
-    "Sentence Embeddings\n",
-    "- Using Bag of Words of ElMo (figure out how to lookup ElMo embeddings)\n",
-    "- Using pretrained InferSent in PyTorch embeddings"
+    "- Using document embedding for clustering"
    ]
   },
   {
@@ -170,6 +166,7 @@
    "source": [
     "from gensim.scripts.glove2word2vec import glove2word2vec\n",
     "glove_input_file = 'data/glove.6B.300d.txt'\n",
+    "\n",
     "word2vec_output_file = 'data/glove.6B.300d.word2vec.txt'"
    ]
   },
@@ -1066,9 +1063,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:nlp]",
+   "display_name": "Python (fastai)",
    "language": "python",
-   "name": "conda-env-nlp-py"
+   "name": "fastai"
   },
   "language_info": {
    "codemirror_mode": {
